--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   amplify_authenticator: ^2.3.2
   permission_handler: ^11.3.1
   agora_rtc_engine: ^6.5.0
+  amplify_api: ^2.6.0
 
 dev_dependencies:
   flutter_test:
