--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   permission_handler: ^11.3.1
   agora_rtc_engine: ^6.5.0
   amplify_api: ^2.6.0
+  provider: ^6.1.2
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
