added api key ios google maps

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 .swiftpm/
 migrate_working_dir/
 android/app/src/main/res/values/strings.xml
+ios/Runner/GoogleMapsConfig.swift
 
 # IntelliJ related
 *.iml
