--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^1.1.2
   google_maps_flutter: ^2.12.0
   geocoding: ^3.0.0
+  amplify_storage_s3: ^2.6.1
 
 dev_dependencies:
   flutter_test:
