--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   google_maps_flutter: ^2.12.0
   geocoding: ^3.0.0
   amplify_storage_s3: ^2.6.1
+  aws_signature_v4: ^0.6.4
 
 dev_dependencies:
   flutter_test:
